Adding factories for fastify entities & updating update-deal logic
